# ObsidianGTD

./: .gitignore  CLAUDE.md  README.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/recaps/: 2025-09-06-context-time-metadata.md  2025-09-06-fastapi-bedrock-service.md  2025-09-06-obsidian-plugin-scaffold.md  2025-09-07-conversational-assistant-chat-sidebar.md
.agent-os/standards/: code-style.md  tech-stack.md
plugin/: .env.example  .eslintrc.json  .gitignore  README.md  deploy.mjs  esbuild.config.mjs  jest.config.js  manifest.json  package.json  tsconfig.json
plugin/docs/: USER_GUIDE.md
plugin/src/: api-client.ts  assistant-view.ts  bedrock-client.ts  clarification-service.ts  conversation-service.ts  gtd-prompts.ts  logger.ts  main.ts  settings-tab.ts  settings.ts
plugin/tests/: api-client-simple.test.ts  assistant-view-filter.test.ts  assistant-view.test.ts  aws-settings.test.ts  bedrock-client.test.ts  bedrock-converse.test.ts  clarification-service.test.ts  clarification.test.ts  (+9 more)
scripts/: import-roadmap-create-issues.mjs  import-roadmap-to-project-classic.mjs  setup-roadmap-project.sh
server/: .coverage  .env.example  README.md  bedrock_client.py  config.py  main.py  models.py  pyproject.toml
server/.agent-os/recaps/: 2025-09-06-fastapi-bedrock-service.md  2025-09-06-task4-completion.md
server/.agent-os/specs/2025-09-06-fastapi-bedrock-service/: tasks.md
server/tests/: test_bedrock_client.py  test_environment_validation.py  test_error_handling.py  test_input_validation.py  test_main.py  test_models.py
(+45 files in other folders)
